Fix layout issues in Safari

--- a/src/internal/grid/styles.scss
+++ b/src/internal/grid/styles.scss
@@ -37,6 +37,11 @@ $columns: 4;
   }
 }
 
+.grid__item {
+  display: block;
+  position: relative;
+}
+
 .grid__item__content {
   width: 100%;
   height: 100%;
@@ -46,8 +51,8 @@ $columns: 4;
     transition-timing-function: ease;
   }
   &.transformed {
-    z-index: 1;
     position: absolute;
+    z-index: 1;
   }
   &.removed {
     display: none;
